# picard-oss

./: .env.example  .gitignore  ACCESSIBILITY.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
backend/: Dockerfile  picard-backend.spec  pytest.ini  requirements-agent.txt  requirements-core.txt  requirements-ml.txt  requirements-pii.txt  requirements.txt  run_desktop.py
desktop/: package-lock.json  package.json
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agent_log.rs  main.rs  port_cleanup.rs
docs/: AGENT_TOOL_MAP.md  ARCHITECTURE.md  MACOS_INSTALL.md  RELEASE.md  WEBSITE_DOWNLOADS.md  eval-query-taxonomy.md  lightagent  phase2-eval.md  phase3-chat-eval.md  phase3-entity-ab.md  phase3-eval.md  rag-best-practices.md
frontend/: Dockerfile  next.config.ts  node-polyfills.cjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
releases/: manifest.json  manifest.template.json
scripts/: backfill-embeddings.sh  build-deb-linux-amd64.sh  build-deb-linux-i386.sh  build-dmg-macos-arm64.sh  build-dmg-macos-x64.sh  build-exe-windows-x64.sh  build-exe-windows-x86.sh  build_backend_sidecar.sh  codesign-macos-app.sh  collect_installer_artifact.py  copy-libreoffice-wasm.sh  copy-pdf-worker.sh  copy-superdoc-fonts.sh  ensure-rust-toolchain.sh  ensure-sidecar-stubs.sh  entity-ab.sh  eval-search.sh  start.sh  (+11 more)
(+389 files in other folders)
